--- a/index.ipynb
+++ b/index.ipynb
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -521,14 +521,15 @@
        "dict_items"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "example_dictionary = {'first_name': \"Terrance\", 'last_name': \"KOAR\", 'favorite_language': \"Python\"}\n",
-    "print(example_dictionary.items())\n"
+    "print(example_dictionary.items())\n",
+    "type(example_dictionary.items())"
    ]
   },
   {
